fix the bug the perspective lines aren't drawn on mobile devices

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -106,6 +106,17 @@ form{
     padding: 10px;
     font-size: 0.8em;
 }
+
+// inputs
+
+input {
+  -webkit-user-select: initial;
+  -khtml-user-select: initial;
+  -moz-user-select: initial;
+  -ms-user-select: initial;
+  user-select: initial;
+}
+
 input[type="button"]{
     margin-top:25px;
     vertical-align: bottom;
